@@ -40,4 +40,12 @@
     <input type="Submit" name="submit" value="Submit" label="Submit" />
 </form>
 
+<form action="https://localhost" method="post">
+    <input type="hidden" name="5a" />
+    <input type="hidden" name="5b" value />
+    <input type="hidden" name="5c" value="" />
+    <input type="hidden" name="5d" value="foo" />
+    <input type="hidden" name="5e" value="value" />
+</form>
+
 </body>
